--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
 
 <body>
 
-    <div class="content">
-        <div class="row st_1" id="1"></div>
-        <div class="row st_2" id="2"></div>
-        <div class="row st_3" id="3"></div>
-        <div class="row st_1" id="4"></div>
-        <div class="row st_2" id="5"></div>
-        <div class="row st_3" id="6"></div>
-        <div class="row st_1" id="7"></div>
-        <div class="row st_2" id="8"></div>
-        <div class="row st_3" id="9"></div>
+    <div class="form">
+        <div class="content">
+            <div class="row st_1" id="1"></div>
+            <div class="row st_2" id="2"></div>
+            <div class="row st_3" id="3"></div>
+            <div class="row st_1" id="4"></div>
+            <div class="row st_2" id="5"></div>
+            <div class="row st_3" id="6"></div>
+            <div class="row st_1" id="7"></div>
+            <div class="row st_2" id="8"></div>
+            <div class="row st_3" id="9"></div>
+        </div>
+        
+        <button class="btn" type="submit" id="btn" >Очистить</button>
+        
     </div>
 
     <script src="main.js"></script>
