--- a/index.html
+++ b/index.html
@@ -13,19 +13,38 @@
 
     <div class="form">
         <div class="content">
-            <div class="row st_1" id="1"></div>
-            <div class="row st_2" id="2"></div>
-            <div class="row st_3" id="3"></div>
-            <div class="row st_1" id="4"></div>
-            <div class="row st_2" id="5"></div>
-            <div class="row st_3" id="6"></div>
-            <div class="row st_1" id="7"></div>
-            <div class="row st_2" id="8"></div>
-            <div class="row st_3" id="9"></div>
+            <div class="cell st_1" id="1">
+                <svg class="svg">
+                    <circle r="30" stroke="blue" cx="50%" cy="50%" stroke-width="5" fill="none" />
+                </svg>
+            </div>
+            <div class="cell st_2" id="2"></div>
+            <div class="cell st_3" id="3"></div>
+            <div class="cell st_1" id="4"></div>
+            <div class="cell st_2" id="5"></div>
+            <div class="cell st_3" id="6"></div>
+            <div class="cell st_1" id="7"></div>
+            <div class="cell st_2" id="8">
+                <svg class="svg">
+                    <line x1="20" x2="80" y1="20" y2="80" stroke="red" stroke-width="5" />
+                    <line x1="20" x2="80" y1="80" y2="20" stroke="red" stroke-width="5" />
+                </svg>
+            </div>
+            <div class="cell st_3" id="9"></div>
         </div>
-        
-        <button class="btn" type="submit" id="btn" >Очистить</button>
-        
+
+        <button class="btn" id="btn">Очистить</button>
+
+        <div class="box">
+            <!-- <svg class="svg">
+                <circle r="30" stroke="blue" cx="50%" cy="50%" stroke-width="5" fill="none"/>
+            </svg>
+            <svg class="svg">
+                <line x1="20" x2="80" y1="20" y2="80" stroke="red" stroke-width="5" />
+                <line x1="20" x2="80" y1="80" y2="20" stroke="red"stroke-width="5" />
+            </svg> -->
+        </div>
+
     </div>
 
     <script src="main.js"></script>
